--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
           <li>Reproducibility: record negatives, aspect ratio, seed, timestamp.</li>
         </ul>
       </div>
-      <figure class="thumb-grid">
-        <img src="assets/brainstorm_game_prompts_en_4000x6000.png" alt="Keyword mindmap preview">
-        <img src="assets/brainstorm_game_prompts_en_4000x6000.png" alt="Keyword mindmap preview">
-      </figure>
+     <figure class="intro-art">
+  <img src="assets/compare.jpg" alt="Midjourney vs Wenxin Yige comparison">
+  <figcaption class="tiny">Midjourney vs Wenxin Yige · aligned prompts (PG / non-sexualized)</figcaption>
+</figure>
     </div>
   </section>
 
