--- a/index.html
+++ b/index.html
@@ -123,16 +123,10 @@
     </div>
 
     <!-- 右侧单张大图：compare.jpg；如果不存在则自动退回脑图 -->
-    <figure class="intro-art">
-      <img
-        src="assets/compare.jpg"
-        alt="Midjourney vs Wenxin Yige comparison"
-        onerror="this.onerror=null;this.src='assets/brainstorm_game_prompts_en_4000x6000.png';"
-      />
-      <figcaption class="tiny">
-        Midjourney vs Wenxin Yige · aligned prompts (PG / non-sexualized)
-      </figcaption>
-    </figure>
+<figure class="intro-art ratio-3-2 cover">
+  <img src="assets/compare.jpg" alt="Midjourney vs Wenxin Yige comparison" />
+  <figcaption class="tiny">Midjourney vs Wenxin Yige · aligned prompts (PG)</figcaption>
+</figure>
   </div>
 </section>
 
