--- a/index.html
+++ b/index.html
@@ -130,17 +130,16 @@
     <div>
       <h2>Midjourney</h2>
       <p>
-        Midjourney is a text-to-image platform based on diffusion models,
-        primarily utilised via a Discord bot. Its default aesthetic leans towards
-        photorealistic/fantasy styles characterised by pronounced lighting and
-        intricate detail. Under the ‘youthful’ character theme, heroic poses and
-        fashion-inspired elements frequently appear; thus, PG-rated content and
-        negative prompts (e.g., avoiding nudity/suggestive postures) are required
-        to control output.
+        Midjourney is a text-to-image platform based on diffusion models, primarily utilised via a Discord bot.
+        Its default aesthetic leans towards photorealistic/fantasy styles with pronounced lighting and intricate detail.
+        Under the ‘youthful’ character theme, heroic poses and fashion-inspired elements frequently appear; thus,
+        PG-rated content and negative prompts (e.g., avoiding nudity/suggestive postures) are required to control output.
       </p>
     </div>
     <figure class="platform-art ratio-3-2 cover">
-      <img src="assets/mj-compare.jpg" alt="Midjourney comparison grid" />
+      <img src="assets/mj-compare.jpg"
+           alt="Midjourney comparison grid"
+           onerror="this.onerror=null;this.src='assets/brainstorm_game_prompts_en_4000x6000.png';">
       <figcaption class="tiny">Midjourney · sample outputs under aligned prompts</figcaption>
     </figure>
   </div>
@@ -152,17 +151,16 @@
     <div>
       <h2>Wenxinyige</h2>
       <p>
-        Wenxin Yige is a text-to-image generation platform developed by Baidu,
-        supporting Chinese prompts and multiple stylistic templates. Its default
-        aesthetic leans towards cartoon/illustrative styles, soft colour palettes,
-        and stylised elements, commonly featuring ‘traditional Chinese aesthetics’
-        and ‘cute-ification’. When generating ‘youthful’ characters, it is advisable
-        to incorporate PG-rated content and negative constraints (such as avoiding
-        nudity or suggestive poses) to control output boundaries.
+        Wenxin Yige is a text-to-image generation platform developed by Baidu, supporting Chinese prompts and multiple stylistic templates.
+        Its default aesthetic leans towards cartoon/illustrative styles, soft colour palettes, and stylised elements,
+        often featuring ‘traditional Chinese aesthetics’ and ‘cute-ification’. For ‘youthful’ characters, incorporate PG-rated content
+        and negative constraints (e.g., avoiding nudity or suggestive poses) to manage output boundaries.
       </p>
     </div>
     <figure class="platform-art ratio-3-2 cover">
-      <img src="assets/wx-compare.jpg" alt="Wenxinyige comparison grid" />
+      <img src="assets/wx-compare.jpg"
+           alt="Wenxinyige comparison grid"
+           onerror="this.onerror=null;this.src='assets/brainstorm_game_prompts_en_4000x6000.png';">
       <figcaption class="tiny">Wenxinyige · sample outputs under aligned prompts</figcaption>
     </figure>
   </div>
