--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
     <a class="brand" href="#top">Code and Culture</a>
     <div class="links">
       <a href="#intro">Intro</a>
+      <a href="#midjourney">Midjourney</a>
+      <a href="#wenxinyige">Wenxinyige</a>
       <a href="#keywords">Keywords</a>
       <a href="#comparisons">Comparisons</a>
       <a href="#analysis">Analysis</a>
