--- a/index.html
+++ b/index.html
@@ -187,20 +187,27 @@
   </section>
 
   <!-- Keywords -->
-  <section id="keywords" class="section section-alt">
-    <div class="section-grid">
-      <figure class="mindmap">
-        <img src="assets/brainstorm_game_prompts_en_4000x6000.png" alt="Brainstorm: prompt keywords" />
-      </figure>
-      <div>
-        <h2>Keyword</h2>
-        <p class="note">
-          Prompts follow EN/CN parity with negative constraints (PG / non-sexualized).
-          Metadata (prompt texts, parameters, notes) can be added later as needed.
-        </p>
-      </div>
+<section id="keywords" class="section section-alt keywords">
+  <div class="kw-grid">
+    <!-- 左侧图片 -->
+    <figure class="kw-art">
+      <img src="assets/brainstorm_game_prompts_en_4000x6000.png"
+           alt="Keyword mind map">
+    </figure>
+
+    <!-- 右侧文案 -->
+    <div class="kw-copy">
+      <h2 class="kw-title">Keyword</h2>
+      <ul class="kw-bullets">
+        <li><strong>Cross-language alignment:</strong> Each theme provides bilingual Chinese–English versions, with semantic consistency verified through back-translation (e.g., age reference, posture, attire, colour palette).</li>
+        <li><strong>PG rating & negative constraints:</strong> Uniformly uses PG-rated, non-sexualised restrictions; excludes terms like nudity/suggestive poses/deep V-necks/fetishisation.</li>
+        <li><strong>Reproducible parameters:</strong> Records platform, style tags, aspect ratio, and (where possible) random seed to ensure repeatable generation.</li>
+        <li><strong>Publicly auditable:</strong> All prompts/metadata follow standard naming; examples are shown at low resolution and restricted to academic use.</li>
+      </ul>
+      <a class="btn btn-outline" href="assets/brainstorm_game_prompts_en_4000x6000.png" target="_blank" rel="noopener">View Image</a>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Comparisons -->
   <section id="comparisons" class="section">
