--- a/index.html
+++ b/index.html
@@ -207,60 +207,60 @@
   </div>
 </section>
 
-  <!-- Comparisons -->
   <section id="comparisons" class="section">
-    <h2>Comparisons</h2>
+  <h2>Comparisons</h2>
 
-    <article class="pair">
-      <h3>Apprentice Swordswoman</h3>
-      <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
-        <img class="img img-left"  src="assets/mj_swordswoman.jpeg" alt="Midjourney · apprentice swordswoman">
-        <img class="img img-right" src="assets/wx_swordswoman.png"  alt="Wenxin Yige · apprentice swordswoman">
-        <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
-      </div>
-    </article>
+  <!-- 1) Swordswoman -->
+  <article class="pair">
+    <h3>Apprentice Swordswoman</h3>
+    <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
+      <img class="img img-left"
+           src="assets/mj_swordswoman.jpeg?v=4"
+           alt="Midjourney · apprentice swordswoman"
+           onerror="if(this.src.includes('.jpeg'))this.src='assets/mj_swordswoman.jpg?v=4';else if(this.src.includes('.jpg'))this.src='assets/mj_swordswoman.png?v=4';else this.style.display='none';">
+      <img class="img img-right"
+           src="assets/wx_swordswoman.png?v=4"
+           alt="Wenxin Yige · apprentice swordswoman"
+           onerror="if(this.src.includes('.png'))this.src='assets/wx_swordswoman.jpg?v=4';else if(this.src.includes('.jpg'))this.src='assets/wx_swordswoman.jpeg?v=4';else this.style.display='none';">
+      <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
+      <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+    </div>
+  </article>
 
- <article class="pair" id="pair-archer">
-  <h3>Apprentice Archer</h3>
-  <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
-    <!-- 左图：先用 .jpeg，失败自动试 .jpg，再失败试 .png -->
-    <img class="img img-left"
-         src="assets/mj_archer.jpeg?v=3"
-         alt="Midjourney · apprentice archer"
-         onerror="
-           console.error('Fail:', this.src);
-           if (this.src.includes('.jpeg')) { this.src='assets/mj_archer.jpg?v=3'; }
-           else if (this.src.includes('.jpg')) { this.src='assets/mj_archer.png?v=3'; }
-           else { this.style.display='none'; }
-         ">
+  <!-- 2) Archer -->
+  <article class="pair" id="pair-archer">
+    <h3>Apprentice Archer</h3>
+    <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
+      <img class="img img-left"
+           src="assets/mj_archer.jpeg?v=4"
+           alt="Midjourney · apprentice archer"
+           onerror="if(this.src.includes('.jpeg'))this.src='assets/mj_archer.jpg?v=4';else if(this.src.includes('.jpg'))this.src='assets/mj_archer.png?v=4';else this.style.display='none';">
+      <img class="img img-right"
+           src="assets/wx_archer.png?v=4"
+           alt="Wenxin Yige · apprentice archer"
+           onerror="if(this.src.includes('.png'))this.src='assets/wx_archer.jpg?v=4';else if(this.src.includes('.jpg'))this.src='assets/wx_archer.jpeg?v=4';else this.style.display='none';">
+      <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
+      <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+    </div>
+  </article>
 
-    <!-- 右图：.png → .jpg → .jpeg -->
-    <img class="img img-right"
-         src="assets/wx_archer.png?v=3"
-         alt="Wenxin Yige · apprentice archer"
-         onerror="
-           console.error('Fail:', this.src);
-           if (this.src.includes('.png')) { this.src='assets/wx_archer.jpg?v=3'; }
-           else if (this.src.includes('.jpg')) { this.src='assets/wx_archer.jpeg?v=3'; }
-           else { this.style.display='none'; }
-         ">
-
-    <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-    <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
-  </div>
-</article>
-
-    <article class="pair">
-      <h3>Young Forest Guardian</h3>
-      <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
-        <img class="img img-left"  src="assets/mj_forest_guardian.jpeg" alt="Midjourney · young forest guardian">
-        <img class="img img-right" src="assets/wx_forest_guardian.png"  alt="Wenxin Yige · young forest guardian">
-        <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
-      </div>
-    </article>
-  </section>
+  <!-- 3) Forest guardian -->
+  <article class="pair">
+    <h3>Young Forest Guardian</h3>
+    <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
+      <img class="img img-left"
+           src="assets/mj_forest_guardian.jpeg?v=4"
+           alt="Midjourney · young forest guardian"
+           onerror="if(this.src.includes('.jpeg'))this.src='assets/mj_forest_guardian.jpg?v=4';else if(this.src.includes('.jpg'))this.src='assets/mj_forest_guardian.png?v=4';else this.style.display='none';">
+      <img class="img img-right"
+           src="assets/wx_forest_guardian.png?v=4"
+           alt="Wenxin Yige · young forest guardian"
+           onerror="if(this.src.includes('.png'))this.src='assets/wx_forest_guardian.jpg?v=4';else if(this.src.includes('.jpg'))this.src='assets/wx_forest_guardian.jpeg?v=4';else this.style.display='none';">
+      <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
+      <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+    </div>
+  </article>
+</section>
 
   <!-- Analysis -->
   <section id="analysis" class="section section-alt">
@@ -340,5 +340,19 @@ document.querySelectorAll('.compare img').forEach(img=>{
     img.addEventListener('error', ()=>console.error('[IMG FAIL]', img.getAttribute('src')));
   });
 </script>
+
+  <script>
+  // 驱动滑块
+  document.querySelectorAll('.compare').forEach(b=>{
+    const s=b.querySelector('.slider'), r=b.querySelector('.img-right');
+    const clip=v=>r&&(r.style.clipPath=`polygon(${v}% 0,100% 0,100% 100%,${v}% 100%)`);
+    if(s&&r){ clip(s.value||50); s.addEventListener('input',e=>clip(e.target.value)); }
+  });
+  // 日志：哪张图失败
+  document.querySelectorAll('img').forEach(img=>{
+    img.addEventListener('error', ()=>console.error('[IMG FAIL]', img.getAttribute('src')));
+  });
+</script>
+  
 </body>
 </html>
