--- a/index.html
+++ b/index.html
@@ -106,44 +106,55 @@
     </div>
   </section>
 
-  <!-- Comparisons -->
   <section id="comparisons" class="section">
-    <h2>Comparisons</h2>
+  <h2>Comparisons</h2>
 
-    <!-- 1) Swordswoman -->
-    <article class="pair">
-      <h3>Apprentice Swordswoman</h3>
-      <div class="compare">
-        <img class="img img-left" src="assets/mj_swordswoman.jpeg" alt="Midjourney · apprentice swordswoman">
-        <div class="reveal"><img class="img img-right" src="assets/wx_swordswoman.png" alt="Wenxin Yige · apprentice swordswoman"></div>
-        <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+  <!-- 1) Swordswoman -->
+  <article class="pair">
+    <h3>Apprentice Swordswoman</h3>
+    <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
+      <img class="img img-left"
+           src="assets/mj_swordswoman.jpeg" alt="Midjourney · apprentice swordswoman">
+      <div class="reveal">
+        <img class="img img-right"
+             src="assets/wx_swordswoman.png" alt="Wenxin Yige · apprentice swordswoman">
       </div>
-    </article>
+      <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
+      <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+    </div>
+  </article>
 
-    <!-- 2) Archer -->
-    <article class="pair">
-      <h3>Apprentice Archer</h3>
-      <div class="compare">
-        <img class="img img-left" src="assets/mj-archer.jpeg" alt="Midjourney · apprentice archer">
-        <div class="reveal"><img class="img img-right" src="assets/wx_archer.png" alt="Wenxin Yige · apprentice archer"></div>
-        <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+  <!-- 2) Archer -->
+  <article class="pair">
+    <h3>Apprentice Archer</h3>
+    <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
+      <!-- 这里一定要用下划线版本的文件名 -->
+      <img class="img img-left"
+           src="assets/mj_archer.jpeg" alt="Midjourney · apprentice archer">
+      <div class="reveal">
+        <img class="img img-right"
+             src="assets/wx_archer.png" alt="Wenxin Yige · apprentice archer">
       </div>
-    </article>
+      <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
+      <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+    </div>
+  </article>
 
-    <!-- 3) Forest guardian -->
-    <article class="pair">
-      <h3>Young Forest Guardian</h3>
-      <div class="compare">
-        <img class="img img-left" src="assets/mj_forest_guardian.jpeg" alt="Midjourney · young forest guardian">
-        <div class="reveal"><img class="img img-right" src="assets/wx_forest_guardian.png" alt="Wenxin Yige · young forest guardian"></div>
-        <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+  <!-- 3) Forest guardian -->
+  <article class="pair">
+    <h3>Young Forest Guardian</h3>
+    <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
+      <img class="img img-left"
+           src="assets/mj_forest_guardian.jpeg" alt="Midjourney · young forest guardian">
+      <div class="reveal">
+        <img class="img img-right"
+             src="assets/wx_forest_guardian.png" alt="Wenxin Yige · young forest guardian">
       </div>
-    </article>
-  </section>
-
+      <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
+      <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+    </div>
+  </article>
+</section>
   <!-- Analysis -->
   <section id="analysis" class="section section-alt">
     <h2>Analysis</h2>
