--- a/index.html
+++ b/index.html
@@ -114,10 +114,12 @@
     <h3>Apprentice Swordswoman</h3>
     <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
       <img class="img img-left"
-           src="assets/mj_swordswoman.jpeg" alt="Midjourney · apprentice swordswoman">
+           src="assets/mj_swordswoman.jpeg?v=7"
+           alt="Midjourney · apprentice swordswoman">
       <div class="reveal">
         <img class="img img-right"
-             src="assets/wx_swordswoman.png" alt="Wenxin Yige · apprentice swordswoman">
+             src="assets/wx_swordswoman.png?v=7"
+             alt="Wenxin Yige · apprentice swordswoman">
       </div>
       <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
       <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
@@ -128,12 +130,13 @@
   <article class="pair">
     <h3>Apprentice Archer</h3>
     <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
-      <!-- 这里一定要用下划线版本的文件名 -->
       <img class="img img-left"
-           src="assets/mj_archer.jpeg" alt="Midjourney · apprentice archer">
+           src="assets/mj_archer.jpeg?v=7"
+           alt="Midjourney · apprentice archer">
       <div class="reveal">
         <img class="img img-right"
-             src="assets/wx_archer.png" alt="Wenxin Yige · apprentice archer">
+             src="assets/wx_archer.png?v=7"
+             alt="Wenxin Yige · apprentice archer">
       </div>
       <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
       <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
@@ -145,16 +148,19 @@
     <h3>Young Forest Guardian</h3>
     <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
       <img class="img img-left"
-           src="assets/mj_forest_guardian.jpeg" alt="Midjourney · young forest guardian">
+           src="assets/mj_forest_guardian.jpeg?v=7"
+           alt="Midjourney · young forest guardian">
       <div class="reveal">
         <img class="img img-right"
-             src="assets/wx_forest_guardian.png" alt="Wenxin Yige · young forest guardian">
+             src="assets/wx_forest_guardian.png?v=7"
+             alt="Wenxin Yige · young forest guardian">
       </div>
       <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
       <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
     </div>
   </article>
 </section>
+  
   <!-- Analysis -->
   <section id="analysis" class="section section-alt">
     <h2>Analysis</h2>
