--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css?v=20">
+  <link rel="stylesheet" href="styles.css?v=15">
 </head>
 <body>
 
@@ -131,8 +131,9 @@
     <h3>Apprentice Archer</h3>
     <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
       <img class="img img-left"
-           src="assets/mj_archer.jpeg?v=7"
-           alt="Midjourney · apprentice archer">
+     src="assets/mj-archer.jpeg?v=15"
+     alt="Midjourney · apprentice archer"
+     onerror="this.onerror=null; this.src='assets/mj_archer.jpeg?v=15';">
       <div class="reveal">
         <img class="img img-right"
              src="assets/wx_archer.png?v=7"
